--- a/commands.html
+++ b/commands.html
@@ -6,7 +6,7 @@
 
 <!--<img src="https://i.imgur.com/zPub3aq.png" alt="banner" class="center" style="width:1020px;height:572px">-->
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Roboto;">FEATURES</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;">FEATURES</h1>
 <p style="text-align:center">BERET has a vast variety of easy-to-use utility, fun, moderation and music commands
 </p>
 <h1 style="text-align:center;background-color:cornflowerblue;">UTILITY</h1>
