--- a/commands.html
+++ b/commands.html
@@ -2,38 +2,38 @@
 <html>
 <head>
 </head>
-<body>
+<body style="background-color:#383838>
 
 <!--<img src="https://i.imgur.com/zPub3aq.png" alt="banner" class="center" style="width:1020px;height:572px">-->
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;">FEATURES</h1>
-<p style="text-align:center;font-family:Lucida Console;">BERET has a vast variety of easy-to-use utility, fun, moderation and music commands
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">FEATURES</h1>
+<p style="text-align:center;font-family:Lucida Console;color:white;">BERET has a vast variety of easy-to-use utility, fun, moderation and music commands
 </p>
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;">UTILITY</h1>
-<p style="text-align:center;font-family:Lucida Console;">b.help
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">UTILITY</h1>
+<p style="text-align:center;font-family:Lucida Console;color:white;">b.help
 <br>b.ping
 <br>b.info @[user] or [id]
 <br>b.server
 </p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;">MODERATION</h1>
-<p style="text-align:center;font-family:Lucida Console;">b.kick @[user]
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">MODERATION</h1>
+<p style="text-align:center;font-family:Lucida Console;color:white;">b.kick @[user]
 <br>b.ban @[user]
 <br>b.purge [number]
 </p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;">FUN</h1>
-<p style="text-align:center;font-family:Lucida Console;">b.lotto
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">FUN</h1>
+<p style="text-align:center;font-family:Lucida Console;color:white;">b.lotto
 <br>b.8ball [question]
 </p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;">MUSIC</h1>
-<p style="text-align:center;font-family:Lucida Console;">b.join
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">MUSIC</h1>
+<p style="text-align:center;font-family:Lucida Console;color:white;">b.join
 <br>b.leave
 <br>b.play [url]
 <br>b.stop</p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;">LINKS</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">LINKS</h1>
 <p style="text-align:center;font-family:Lucida Console;">
   <a href="https://beretbot.wordpress.com/">website</a>
   <br><a href="https://discord.com/oauth2/authorize?client_id=807641111140499466&scope=bot&permissions=8">bot invite</a>
