--- a/commands.html
+++ b/commands.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 </head>
-<body style="background-color:#383838>
+<body style="background-color:#383838;">
 
-<!--<img src="https://i.imgur.com/zPub3aq.png" alt="banner" class="center" style="width:1020px;height:572px">-->
+<!--<img src="https://i.imgur.com/zPub3aq.png" alt="banner" class="center" style="width:1020px;height:572px">
 
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">FEATURES</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">BERET has a vast variety of easy-to-use utility, fun, moderation and music commands
