--- a/commands.html
+++ b/commands.html
@@ -33,6 +33,31 @@
 
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">LINKS</h1>
 <p style="text-align:center;font-family:Lucida Console;">
+  <style>
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: cornflowerblue;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: white;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: dodgerblue;
+  background-color: transparent;
+  text-decoration: underline;
+}
+</style>
   <a href="https://beretbot.wordpress.com/">website</a>
   <br><a href="https://discord.com/oauth2/authorize?client_id=807641111140499466&scope=bot&permissions=8">bot invite</a>
   <br><a href="https://discord.gg/wknXCHJacz">temporary server invite</a>
