--- a/commands.html
+++ b/commands.html
@@ -58,7 +58,7 @@ a:active {
   text-decoration: underline;
 }
 </style>
-  <a href="https://beretbot.wordpress.com/">website</a>
+  <a href="https://top.gg/bot/807641111140499466">top.gg</a>
   <br><a href="https://discord.com/oauth2/authorize?client_id=807641111140499466&scope=bot&permissions=8">bot invite</a>
   <br><a href="https://discord.gg/wknXCHJacz">temporary server invite</a>
   <br><a href="https://discord.gg/hWTcUkynDN">permanent server invite</a>
