--- a/commands.html
+++ b/commands.html
@@ -4,34 +4,34 @@
 </head>
 <body style="background-color:#383838;">
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">FEATURES</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">FEATURES</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">BERET has a vast variety of easy-to-use utility, fun, moderation and music commands
 </p>
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">UTILITY</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">UTILITY</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">b.help
 <br>b.ping
 <br>b.info @[user] or [id]
 <br>b.server
 </p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">MODERATION</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">MODERATION</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">b.kick @[user]
 <br>b.ban @[user]
 <br>b.purge [number]
 </p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">FUN</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">FUN</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">b.lotto
 <br>b.8ball [question]
 </p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">MUSIC</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">MUSIC</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">b.join
 <br>b.leave
 <br>b.play [url]
 <br>b.stop</p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Lucida Console;color:white;">LINKS</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">LINKS</h1>
 <p style="text-align:center;font-family:Lucida Console;">
   <style>
 a:link {
