--- a/commands.html
+++ b/commands.html
@@ -8,28 +8,28 @@
 <p style="text-align:center;font-family:Lucida Console;color:white;">BERET has a vast variety of easy-to-use utility, fun, moderation and music commands
 </p>
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">UTILITY</h1>
-<p style="text-align:center;font-family:Lucida Console;color:white;">b.help
-<br>b.ping
-<br>b.info @[user] or [id]
-<br>b.server
+<p style="text-align:center;font-family:Lucida Console;color:white;"><code>b.help</code>
+<br><code>b.ping</code>
+<br><code>b.info @[user] or [id]</code>
+<br><code>b.server</code>
 </p>
 
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">MODERATION</h1>
-<p style="text-align:center;font-family:Lucida Console;color:white;">b.kick @[user]
-<br>b.ban @[user]
-<br>b.purge [number]
+<p style="text-align:center;font-family:Lucida Console;color:white;"><code>b.kick @[user]</code>
+<br><code>b.ban @[user]</code>
+<br><code>b.purge [number]</code>
 </p>
 
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">FUN</h1>
-<p style="text-align:center;font-family:Lucida Console;color:white;">b.lotto
-<br>b.8ball [question]
+<p style="text-align:center;font-family:Lucida Console;color:white;"><code>b.lotto</code>
+<br><code>b.8ball [question]</code>
 </p>
 
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">MUSIC</h1>
-<p style="text-align:center;font-family:Lucida Console;color:white;">b.join
-<br>b.leave
-<br>b.play [url]
-<br>b.stop</p>
+<p style="text-align:center;font-family:Lucida Console;color:white;"><code>b.join</code>
+<br><code>b.leave</code>
+<br><code>b.play [url]</code>
+<br><code>b.stop</code></p>
 
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">LINKS</h1>
 <p style="text-align:center;font-family:Lucida Console;">
