--- a/commands.html
+++ b/commands.html
@@ -4,34 +4,38 @@
 </head>
 <body style="background-color:#383838;">
 
+  h1 {
+  font-size: 16px;
+}
+  
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">FEATURES</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">BERET has a vast variety of easy-to-use utility, fun, moderation and music commands
 </p>
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;font-size:16px;">UTILITY</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">UTILITY</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;"><code>b.help</code>
 <br><code>b.ping</code>
 <br><code>b.info @[user] or [id]</code>
 <br><code>b.server</code>
 </p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;font-size:16px;">MODERATION</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">MODERATION</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;"><code>b.kick @[user]</code>
 <br><code>b.ban @[user]</code>
 <br><code>b.purge [number]</code>
 </p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;font-size:16px;">FUN</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">FUN</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;"><code>b.lotto</code>
 <br><code>b.8ball [question]</code>
 </p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;font-size:16px;">MUSIC</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">MUSIC</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;"><code>b.join</code>
 <br><code>b.leave</code>
 <br><code>b.play [url]</code>
 <br><code>b.stop</code></p>
 
-<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;font-size:16px;">LINKS</h1>
+<h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">LINKS</h1>
 <p style="text-align:center;font-family:Lucida Console;">
   <style>
 a:link {
