--- a/commands.html
+++ b/commands.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="mystyle.css">
 </head>
 <body style="background-color:#383838;">
   
