--- a/commands.html
+++ b/commands.html
@@ -11,25 +11,25 @@
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">UTILITY</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">b.help
 <br>b.ping
-<br>b.info @[user] or [id]
+<br>b.info @&ltuser&gt or &ltid&gt
 <br>b.server
 </p>
 
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">MODERATION</h1>
-<p style="text-align:center;font-family:Lucida Console;color:white;">b.kick @[user]
-<br>b.ban @[user]
-<br>b.purge [number]
+<p style="text-align:center;font-family:Lucida Console;color:white;">b.kick @&ltuser&gt
+<br>b.ban @&ltuser&gt
+<br>b.purge &ltnumber&gt
 </p>
 
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">FUN</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">b.lotto
-<br>b.8ball [question]
+<br>b.8ball &ltquestion&gt
 </p>
 
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">MUSIC</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">b.join
 <br>b.leave
-<br>b.play [url]
+<br>b.play &lturl&gt
 <br>b.stop
   </p>
 
