--- a/commands.html
+++ b/commands.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="mystyle.css">
+  <link rel="icon" href="https://cdn.discordapp.com/avatars/807641111140499466/7d2bc426bafcb063554660d5c7666cea.webp?size=1024">
 </head>
 <body style="background-color:#383838;">
   
