--- a/commands.html
+++ b/commands.html
@@ -7,7 +7,7 @@
 <body style="background-color:#383838;">
   
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">FEATURES</h1>
-<p style="text-align:center;font-family:Lucida Console;color:white;">BERET has a vast variety of easy-to-use utility, fun, moderation and music commands
+<p style="text-align:center;font-family:Lucida Console;color:white;">BERET is a Discord Bot a vast variety of easy-to-use utility, fun, moderation and music commands
 </p>
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">UTILITY</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">b.help
