--- a/commands.html
+++ b/commands.html
@@ -30,7 +30,7 @@
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">MUSIC</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">b.join
 <br>b.leave
-<br>b.play &lturl&gt
+<br>b.play &lturl&gt or &ltsearch&gt
 <br>b.stop
   </p>
 
