--- a/commands.html
+++ b/commands.html
@@ -3,8 +3,11 @@
 <head>
   <link rel="stylesheet" href="commandstyle.css">
   <link rel="icon" href="https://cdn.discordapp.com/avatars/807641111140499466/7d2bc426bafcb063554660d5c7666cea.webp?size=1024">
-</head>
-<body style="background-color:#383838;">
+  <style>
+    body { background: #383838 }
+  </style>
+  </head>
+<body>
   
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">FEATURES</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">BERET is a Discord Bot a vast variety of easy-to-use utility, fun, moderation and music commands
