--- a/commands.html
+++ b/commands.html
@@ -4,7 +4,7 @@
   <link type="text/css" rel="stylesheet" href="./commandstyle.css" />
   <link rel="icon" href="https://cdn.discordapp.com/avatars/807641111140499466/7d2bc426bafcb063554660d5c7666cea.webp?size=1024" />
   <style>
-    body { background-color: #383838 }
+    body { background-color: #0ff }
   </style>
   </head>
 <body>
