--- a/commands.html
+++ b/commands.html
@@ -28,6 +28,7 @@
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">FUN</h1>
 <p style="text-align:center;font-family:Lucida Console;color:white;">b.lotto
 <br>b.8ball &ltquestion&gt
+<br>b.topic
 </p>
 
 <h1 style="text-align:center;background-color:cornflowerblue;font-family:Verdana;color:white;">MUSIC</h1>
