--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link type="text/css" rel="stylesheet" href="./commandstyle.css" />
   <link rel="icon" href="https://cdn.discordapp.com/avatars/807641111140499466/7d2bc426bafcb063554660d5c7666cea.webp?size=1024" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Find BERET's commands">
+  <meta name="description" content="BERET is a Discord Bot a vast variety of easy-to-use utility, fun, moderation and music commands">
   <style>
     body { background-color: #383838 }
   </style>
