--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ a:active {
   <br><a href="https://discord.com/oauth2/authorize?client_id=807641111140499466&scope=bot&permissions=8">bot invite</a>
   <br><a href="https://discord.gg/wknXCHJacz">temporary server invite</a>
   <br><a href="https://discord.gg/hWTcUkynDN">permanent server invite</a>
-  <br><a href="https://indeeddev.github.io/personal/">developer</a>
+  <br><a href="https://indeeddev.github.io/">developer</a>
 </p>
 
 </body>
